@@ -40,10 +40,7 @@ defined Builder and/or Scanner objects.
 python setup.py build
 
 %install
-python setup.py install --root=$RPM_BUILD_ROOT --record=INSTALLED_FILES --install-lib=/usr/lib/scons --install-scripts=/usr/bin
-mkdir -p $RPM_BUILD_ROOT%_mandir/man1
-gzip -c scons.1 > $RPM_BUILD_ROOT%_mandir/man1/scons.1.gz
-gzip -c sconsign.1 > $RPM_BUILD_ROOT%_mandir/man1/sconsign.1.gz
+python setup.py install --root=$RPM_BUILD_ROOT --record=INSTALLED_FILES --install-lib=/usr/lib/scons --install-scripts=/usr/bin --install-data=/usr/share
 
 %clean
 rm -rf $RPM_BUILD_ROOT
